# karpenter-cost-attribution-cli

./: README.md  pyproject.toml
examples/: sample_output.md
src/karpenter_cost_attribution/: attribution.py  cli.py  k8s_client.py  pricing.py  report.py
tests/: test_attribution.py  test_pricing.py  test_report.py
